fixed CaseService